--- a/libs/imgui/CMakeLists.txt
+++ b/libs/imgui/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.11)
 file(GLOB IMGUI_HEADERS "include/*.h")
 file(GLOB IMGUI_SOURCES "src/*.cpp")
 
-add_library(imgui ${IMGUI_HEADERS} ${IMGUI_SOURCES})
+add_library(imgui ${IMGUI_HEADERS} ${IMGUI_SOURCES} ../../include/rg/Shader.h)
 
 target_include_directories(imgui PUBLIC include/)
 target_link_libraries(imgui glad)
