added finish line

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,7 +19,12 @@ Size=408,124
 Collapsed=0
 
 [Window][Hello window]
-Pos=26,338
-Size=404,201
+Pos=24,369
+Size=386,119
+Collapsed=0
+
+[Window][You did it!]
+Pos=60,60
+Size=391,81
 Collapsed=0
 
